--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <title>Document</title> 
-</head>
-<body>
-    <div id="root">
-        
-    </div>
-    <script>
-        //let root = document.getElementById('root');
-        //let h1 = document.createElement('h1');
-        //h1.innerHTML = "Hello World!";
-        //root.appendChild(h1);
-        //console.log(root); 
-    </script>
-    <script src="./App.js"></script>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>-->
+    <!--<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>-->
+    <!--<script type="text/Javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script> -->
+    <!--<script type="text/Javascript" src="http://requirejs.org/docs/release/2.1.5/comments/require.js"></script> -->
+    <!--<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/dist/lodash.min.js"></script> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./style.css">
+
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <!--<script type="module">
+        setTimeout(function () {
+
+            require.config({
+                paths: {
+                    "lodash": "https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+                },
+                waitSeconds: 40
+              });
+
+            var _ = require(['lodash'], function($) {
+                console.log($)
+            });
+        }, 2000)
+            //let root = document.getElementById('root');
+            //let h1 = document.createElement('h1');
+            //h1.innerHTML = "Hello World!";
+            //root.appendChild(h1);
+            //console.log(root); 
+            //console.log(_);
+        //    document.querySelector("body").onload =
+        //    function() {console.log(_.sample([1, 2, 3, 4]))}
+        //}, 2000)
+    </script> !-->
+
+    <!-- Your script that uses Lodash -->
+    <!--<script>
+        // Now you can use Lodash functions
+        const array = [1, 2, 3, 4, 5];
+
+        // Example: Using the _.shuffle function
+        const shuffledArray = _.shuffle(array);
+
+        // Display the result in the console
+        console.log('Original Array:', array);
+        console.log('Shuffled Array:', shuffledArray);
+    </script> -->
+    <script type="module" src="./App.js"></script>
+  </body>
 </html>
