--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         console.log('Original Array:', array);
         console.log('Shuffled Array:', shuffledArray);
     </script> -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
